# WalletService

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  OPENAPI_DOCS.json  README.md  alembic.ini  docker-compose.common.yml  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2332cb37b9b5_initial_tables2.py  9845c6ef26dc_initial_tables.py
app/: config.py  main.py
app/api/v1/: routes.py
app/crud/: operation.py  wallet.py
app/db/: base.py  session.py
app/models/: __init__.py  enums.py  operation.py  wallet.py
app/schemas/: operation.py  wallet.py
app/services/: wallet_service.py
docker/: run-tests.sh
docker/db/: seed.sql  seed_and_reset.sh
tests/: conftest.py  test_endpoints.py
tests/unit/: test_operations_schema.py
